--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "uuid": "^3.2.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
