--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
-    "immutable": "^3.8.2",
+    "flux": "^3.1.3",
+    "keymirror": "^0.1.1",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "sass-loader": "^6.0.7",
+    "semantic-ui-react": "^0.79.1",
     "style-loader": "^0.20.3",
     "uuid": "^3.2.1",
     "webpack": "^4.1.1",
